@startuml

'This should probably be an object-diagram instead

package "Cell Data Model" {
  [Size : integer] as cell_size
  [Candidates : collection of integers] as cell_candidates
  [Solution : integer] as cell_solution
  interface "Max size" as cell_max
  cell_max --> cell_size
  cell_max --> cell_candidates
  cell_max --> cell_solution

  interface "Max number of candidates" as candidate_number
  candidate_number--> cell_candidates

  interface "Candidates size > 0 only if no solution" as candidate_solution
  candidate_solution --> cell_candidates
  candidate_solution --> cell_solution
}

package "Grid Data Model" {
  [GridSize : integer] as grid_size
  [AllCells: collection of GridSize*GridSize Cells] as all_cells
  interface "Grid coordinates are <= GridSize" as grid_coordinates
  grid_coordinates --> grid_size
  grid_coordinates --> all_cells

  interface "Cell solution is unique in row, column, and block" as unique_solution
  unique_solutiom --> all_cells
}

@enduml
